Chap01/ex01.txt
Exercise 1.1 컴퓨터 보조기억장치 기능은 무엇입니까?

c) 파워가 없을 때도 정보를 장시간 저장한다.

Exercise 1.2 프로그램은 무엇입니까?

프로그램은 어떤 일을 하기 위해 처리 방법과 순서를 기술해서 컴퓨터에 주어지는 일련의 명령문 집합체를 뜻한다.

Exercise 1.3 컴파일러와 인터프리터의 차이점을 설명하세요.

컴파일러는 번역기, 인터프리터는 실행기이다.
인터프리터는 컴파일러와 다르게 한 줄씩 번역을 하고 컴파일러에 비해 번역 시간이 빠른 편이다.
하지만 실행 파일을 생성하지 않기 때문에 매번 실행할 때마다 번역을 해줘야한다.
반면 컴파일러는 한 번 실행할 때 한 번에 번역을 하고 실행 파일을 생성한다.

Exercise 1.4 기계어 코드는 다음중 어는 것입니까?

a) 파이썬 인터프리터

Exercise 1.5 다음 코드에서 잘못된 점을 설명하세요.
>>> primt 'Hello world!'
File "<stdin>", line 1
primt 'Hello world!'
^
SyntaxError: invalid syntax
>>>

primt를 print로 바꾼다.

Exercise 1.6 다음 파이썬 프로그램이 실행된 후에, 변수 "X"는 어디에 저장됩니까?

x = 123

b) 주메모리

Exercise 1.7 다음 프로그램에서 출력되는 것은 무엇입니까?

x = 43
x = x + 1
print x

b) 44

Exercise 1.8 사람의 어느 능력부위를 예제로 사용하여 다음 각각을 설명하세요.

(1) 중앙처리장치, (2) 주메모리, (3) 보조메모리, (4) 입력장치 (5) 출력장치
예를 들어 중앙처리장치에 상응하는 사람의 몸 부위는 어디입니까? 뇌와 같다.
주메모리는 빠르고 자유롭게 읽고 쓸 수있는 기억 공간이다.
보조메모리는 전기가 없어도 유지되는 장기 기억 공간이다.
입력장치는 키보드, 마우스와 같이 입력을 할 수 있는 장치를 의미한다.
출력창치는 스피커, 모니터와 같이 출력을 할 수 있는 장치를 의미한다.

Exercise 1.9 구문오류("Syntax Error")는 어떻게 고칩니까?

문법적으로 틀린 부분이 있는지 확인해야 한다.
